--- a/frontend/src/components/PlayerList.css
+++ b/frontend/src/components/PlayerList.css
@@ -1,14 +1,3 @@
-.player-list {
-    display: block;
-    text-align: center;
-    margin: 20px;
-    padding: auto;
-    background-color: #1c1c1c;
-    border-radius: 10px;
-    box-shadow: 0 0 7px black;
-    border: 1px solid black;
-}
-
 .player-list h1 {
     font-size: 2.5rem;
     color: #17a2b8;
@@ -17,26 +6,48 @@
 .player-list ul {
     list-style-type: none;
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Centers list items */
+    gap: 20px; /* Space between items */
 }
 
+/* Enhancing the PlayerList Styling */
+.player-list {
+    width: 100%;
+    max-width: 900px;
+    padding: 20px;
+}
+
+
 .player-list li {
+    list-style: none;
+    width: 200px;
+    margin: 10px;
     padding: 10px;
-    margin: 15px 0;
 }
 
 .player-link {
-    margin: 5px;
-    padding: 5px 10px;
-    background-color: #eee;
-    border-radius: 5px;
-    font-size: 0.9rem;
-    color: #212529;
-    border: 3px solid ;
+    display: flex;
+    width: 100%;
+    height: 90px;
+    align-items: center;
+    text-align: center;
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: white;
+    background-color: #343a40;
+    padding: 15px 20px;
+    border-radius: 10px;
+    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     box-shadow: 0 0 7px black;
     border: 2px solid black;
 }
 
 .player-link:hover {
-    transform: scale(1.1);
-    transition: transform 0.3s ease-in-out;
+    transform: scale(1.05);
+    box-shadow: 0 6px 15px rgba(23, 162, 184, 0.7);
 }
+
+
