--- a/frontend/src/pages/Players.css
+++ b/frontend/src/pages/Players.css
@@ -24,45 +24,3 @@
     margin-bottom: 10px;
 }
 
-
-
-/* Enhancing the PlayerList Styling */
-.player-list {
-    width: 100%;
-    max-width: 900px;
-    padding: 20px;
-}
-
-.player-list ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-}
-
-.player-list li {
-    list-style: none;
-    width: 200px;
-    margin: 10px;
-}
-
-.player-link {
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    font-size: 1.5rem;
-    text-decoration: none;
-    color: white;
-    background-color: #343a40;
-    padding: 15px 20px;
-    border-radius: 10px;
-    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 0 7px black;
-    border: 2px solid black;
-}
-
-.player-link:hover {
-    transform: scale(1.05);
-    box-shadow: 0 6px 15px rgba(23, 162, 184, 0.7);
-}
